--- a/spring-product/spring-product-service/src/main/resources/bootstrap.yaml
+++ b/spring-product/spring-product-service/src/main/resources/bootstrap.yaml
@@ -5,14 +5,10 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
-        group: gray
       config:
         server-addr: 127.0.0.1:8848
+        file-extension: yaml
         shared-configs:
           - data-id: datasource.yaml
             group: DEFAULT_GROUP
             refresh: true
-  config:
-    import: nacos:spring-product-service.yaml?refreshEnabled=true&group=gray
-server:
-  port: 8021
